# agent_bencher

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
agents/: claude-qwen36-27b.yaml  claude-qwen36-35b.yaml
conversations/: sample-conversation.yaml
docs/superpowers/: 2026-06-03-charts-design.md
docs/superpowers/plans/: 2026-05-30-agent-benchmark-harness.md  2026-06-01-dry-run-overrides.md  (+10 more)
run_configs/: claude-qwen3.6-35B-A3B-oQ6-fp16-mtp.yaml  claude-qwen35-122B-mtp.yaml  claude-qwen35-122B.yaml  claude-qwen36-27b-mtp.yaml  claude-qwen36-35b-mtp.yaml  claude-qwen36-35b.yaml  opencode-lmstudio-qwen36-27b-q5_k_xl-mtp.yaml  opencode-lmstudio-qwen36-35b-a3b-q6_k_xl-mtp.yaml  opencode-mtplx-qwen36-27b-quality.yaml  opencode-mtplx-qwen36-27b-speed.yaml  opencode-mtplx-qwen36-27b.yaml  opencode-mtplx-qwen36-35b-a3b-balance.yaml  opencode-omlx-qwen35-122B-mtp.yaml  opencode-omlx-qwen35-122B.yaml  opencode-omlx-qwen36-27B-dflash.yaml  opencode-omlx-qwen36-27B-oQ4-mtp.yaml  opencode-omlx-qwen36-27B-oQ6-mtp.yaml  opencode-omlx-qwen36-27B.yaml  opencode-omlx-qwen36-35b-a3b-6bit-dflash.yaml  opencode-omlx-qwen36-35b-a3b-oQ6-fp16-mtp.yaml  opencode-omlx-qwen36-35b.yaml
src/agent_bencher/: __main__.py  batch.py  cli.py  metrics.py  models.py  process.py  report.py  results.py  runner.py  suite.py  viz.py  workspace.py
tests/: test_adapters.py  test_batch.py  test_cli_repeat_runs.py  test_process.py  test_report.py  test_results.py  test_runner.py  test_suite.py  test_viz.py  test_workspace.py
tests/fixtures/: claude-turn.json  opencode-turn.jsonl
(+9 files in other folders)
